fix clipping with skills

--- a/src/pages/Home/Skills.css
+++ b/src/pages/Home/Skills.css
@@ -152,6 +152,7 @@ li {
   font-family: 'Quicksand', sans-serif;
   padding-left: 10px;
   padding-top: 5px;
+  width: 300px;
 }
 
  @keyframes Animate-HTML {
