--- a/src/pages/Portfolio/Portfolio.css
+++ b/src/pages/Portfolio/Portfolio.css
@@ -2,6 +2,7 @@
 
 .portfolio {
   height: 100vh;
+  width: auto;
 }
 
 .work-container {
@@ -11,13 +12,6 @@
   list-style: none;
   -webkit-flex-flow: row wrap;
   justify-content: space-around;
-}
-
-.flex-item {
-  cursor: pointer;
-  padding: 5px;
-  color: white;
-  text-align: center;
 }
 
 p {
@@ -71,6 +65,7 @@ p {
 
 
 .column {
+  height: 100vh;
   margin: 15px 15px 0;
   padding: 0;
 }
